# insight_gui

./: .desktop  .gitignore  ANALYSIS_AND_RECOMMENDATIONS.md  CHANGELOG.rst  README.md  TODO.md  package.xml  setup.cfg  setup.py
insight_gui/: application.py  dummy_graph.py  dummy_img_pub.py  dummy_log_pub.py  dummy_tf_broadcaster.py  exceptions.py  main.py  pages.py  ros2_connector.py  ros2_node.py  window.py  window.ui
insight_gui/data/: adw_accent_colors.css  com.github.julianmueller.Insight.desktop  com.github.julianmueller.Insight.gresource.xml  com.github.julianmueller.Insight.gschema.xml  resources.gresource.xml
insight_gui/debug/: debug_config.yaml  ros2_connector_dummy.py
insight_gui/models/: action_item.py  interface_item.py  node_item.py  package_item.py  parameter_item.py  service_item.py  topic_item.py
insight_gui/ros2_pages/: action_goal_page.py  action_info_page.py  action_list_page.py  action_pages.py  controller_manager_page.py  doctor_page.py  edit_param_dialog.py  graph_page.py  img_viewer_page.py  improved_tf_page.py  interface_browser_page.py  interface_definition_page.py  interface_info_page.py  interface_type_dialog.py  joint_states_page.py  launch_info_page.py  launch_list_page.py  log_page.py  log_pages.py  msg_type_browser_pages.py  msg_type_info_pages.py  multicast_page.py  new_pkg_dialog.py  node_info_page.py  node_list_page.py  node_pages.py  overview_page.py  param_edit_dialog.py  param_edit_page.py  param_list_page.py  param_page.py  pkg_info_page.py  pkg_list_page.py  pkg_new_dialog.py  pkg_pages.py  preferences_dialog.py  (+17 more)
(+69 files in other folders)
