<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>insight_gui</name>
    <version>0.0.1</version>
    <description>Insight is a minimalist GUI alternative to rqt. It is a GTK4-based tool for exploring ROS2 topics, services, and messages, featuring the GNOME Adwaita style.</description>
    <maintainer email="julian.mueller@iwb.tum.de">Julian Müller</maintainer>
    <license>Apache-2.0</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <!-- <exec_depend>python-gi</exec_depend> -->
    <!-- <exec_depend>python-gi-cairo</exec_depend> -->
    <!-- <exec_depend>libadwaita</exec_depend> -->

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>